Fixing card subheadings for complaints/spills
Used to say "in the last 14 days" now says "since Sep 7" to be more
accurate

--- a/html_js/css/index.css
+++ b/html_js/css/index.css
@@ -557,6 +557,11 @@ button.button.map-control-button.button {
   transition: color 0.2s;
 }
 
+.card .sublabel {
+  text-align: left;
+  padding-left: calc(var(--p1) + var(--icon));
+}
+
 .card-data table {
   width: 100%;
   table-layout: fixed;
